--- a/client-side/app/src/App.css
+++ b/client-side/app/src/App.css
@@ -1,13 +1,6 @@
-body {
-  font-family: 'Open Sans Condensed', sans-serif;
-  padding: 20px 60px;
-}
-
-a {
-  text-decoration: none;
-  color: black;
-}
-
-* {
-  box-sizing: border-box;
+.App{
+  border: solid 1px red;
+  width: 1280px;
+  font-family: 'Open Sans', sans-serif;
+  margin: 0 auto;
 }
