--- a/client-side/app/src/components/create-examination/create-examination.style.scss
+++ b/client-side/app/src/components/create-examination/create-examination.style.scss
@@ -1,14 +1,7 @@
-.sign-in {
-    width: 30%;
+.create-examination {
+    width: 50%;
     display: flex;
     flex-direction: column;
+    margin: 0 auto;
 
-    h2 {
-        margin: 2em 0;
-    }
-
-    .buttons {
-        display:flex;
-        justify-content: space-between;
-    }
 }
