--- a/client-side/app/src/components/header/header.style.scss
+++ b/client-side/app/src/components/header/header.style.scss
@@ -1,25 +1,34 @@
 .header {
-  height: 70px;
-  width: 100%;
   display: flex;
-  justify-content: space-between;
-  margin-bottom: 25px;
+  flex-direction: row;
+  justify-content: space-evenly;
+  color: black;
+  margin: 3em;
+  font-size: 1.2em;
 
-  .logo-container {
-    height: 100%;
-    width: 70px;
-    padding: 25px;
+
+  .logo-container{
+    
+    .logo{
+      padding: 1em;
+    }
   }
-
   .options {
-    width: 50%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+    width: 60%;
+    padding: 3em;
 
     .option {
-      padding: 10px 15px;
+      color: black;
+      padding: 2em;
+      font-weight: 700;
+      text-decoration: none;
+    }
+
+    
+    a:hover{
+      color: white;
+      background-color: #FA7762;
+      font-weight: 800;
       cursor: pointer;
     }
   }
