added style to menu, myprofile and login, dynamic menu

--- a/client-side/app/src/components/examinations-card/examinations-card.style.scss
+++ b/client-side/app/src/components/examinations-card/examinations-card.style.scss
@@ -29,7 +29,7 @@
       }
 
       .description {
-        border-top: double 1px black;
+        border-top:solid 2px #FA7762;
         margin-top: 1em;
         padding-top: 1em;
       }
