--- a/client-side/app/src/App.css
+++ b/client-side/app/src/App.css
@@ -1,6 +1,3 @@
 .App{
-  border: solid 1px red;
-  width: 1280px;
-  font-family: 'Open Sans', sans-serif;
-  margin: 0 auto;
+  font-family: 'Roboto Condensed', sans-serif;
 }
