--- a/client-side/app/src/components/header/header.style.scss
+++ b/client-side/app/src/components/header/header.style.scss
@@ -1,35 +1,65 @@
 .header {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
-  color: black;
-  margin: 3em;
-  font-size: 1.2em;
+  justify-content: center;
+  font-size: 1.4em;
+  background-color: #182534;
+  padding: 1em;
+  margin-bottom: 1em;
 
 
   .logo-container{
-    
+    width: 10%;
     .logo{
-      padding: 1em;
+      padding-top:1em ;
     }
   }
   .options {
-    width: 60%;
-    padding: 3em;
+    width: 50%;
+    padding: 2em;
+    color: white;
+    display: flex;
+    justify-content: space-evenly;
+    
+
 
     .option {
-      color: black;
-      padding: 2em;
-      font-weight: 700;
+      color: white;
+      padding: 1em;
       text-decoration: none;
     }
 
     
     a:hover{
-      color: white;
-      background-color: #FA7762;
-      font-weight: 800;
+      padding-bottom: 1em;
+      border-bottom:solid 1px #FA7762;
       cursor: pointer;
     }
+
+  }
+
+  .top-right-menu{
+    background-color: #3A96DD;
+    width: 10%;
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    height: 3em;
+
+    .option-top-right {
+      padding: .2em;
+      margin: 0 auto;
+      text-decoration: none;
+      color: white;
+      font-size: .8em;
+
+      
+    }
+
+    a:hover{
+      font-weight: 600;
+      cursor: pointer;
+    }
+
   }
 }
