--- a/client-side/app/src/components/sign-in/sign-in.style.scss
+++ b/client-side/app/src/components/sign-in/sign-in.style.scss
@@ -1,7 +1,10 @@
 .sign-in {
-    width: 30%;
+    width: 70%;
     display: flex;
     flex-direction: column;
+    margin: 0 auto;
+    padding-bottom: 3em;
+    border-bottom:solid 2px #FA7762;
 
     h2 {
         margin: 2em 0;
