--- a/client-side/app/src/components/sing-up/sing-up.style.scss
+++ b/client-side/app/src/components/sing-up/sing-up.style.scss
@@ -1,7 +1,8 @@
 .sign-up {
-    width: 30%;
+    width: 70%;
     display: flex;
     flex-direction: column;
+    margin: 0 auto;
 
     h2 {
         margin: 2em 0;
