--- a/client-side/app/src/pages/sign-in-sing-up-page/sign-in-sing-up-page.style.scss
+++ b/client-side/app/src/pages/sign-in-sing-up-page/sign-in-sing-up-page.style.scss
@@ -1,5 +1,6 @@
 .sing-in-sign-up-page {
     display : flex;
-    flex-direction: row;
+    flex-direction: column-reverse;
     justify-content: space-around;
+    margin: 0 auto;
 }
