refacto sing sign up page and utils db

--- a/client-side/app/src/components/header/header.style.scss
+++ b/client-side/app/src/components/header/header.style.scss
@@ -2,26 +2,22 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  font-size: 1.4em;
   background-color: #182534;
-  padding: 1em;
-  margin-bottom: 1em;
+  padding: 0.5em;
+  // margin-bottom: 1em;
 
-
-  .logo-container{
+  .logo-container {
     width: 10%;
-    .logo{
-      padding-top:1em ;
+    .logo {
+      padding-top: 0.5em;
     }
   }
   .options {
-    width: 50%;
-    padding: 2em;
+    // width: 50%;
+    // padding: 2em;
     color: white;
     display: flex;
     justify-content: space-evenly;
-    
-
 
     .option {
       color: white;
@@ -30,20 +26,18 @@
       cursor: pointer;
     }
 
-    
-    a:hover{
-      padding-bottom: 1em;
-      border-bottom:solid 1px #FA7762;
+    a:hover {
+      border-top: solid 2px #fa7762;
+      border-bottom: solid 2px #fa7762;
     }
 
-    div:hover{
-      padding-bottom: 1em;
-      border-bottom:solid 1px #FA7762;
+    div:hover {
+      border-top: solid 2px #fa7762;
+      border-bottom: solid 2px #fa7762;
     }
-
   }
 
-  .top-right-menu{
+  .top-right-menu {
     // background-color: #3A96DD;
     // width: 10%;
     // text-decoration: none;
@@ -52,18 +46,15 @@
     // height: 3em;
 
     .option-top-right {
- 
       margin: 0 auto;
       text-decoration: none;
       color: white;
-      font-size: .8em;
+      font-size: 0.8em;
       cursor: pointer;
 
-      div:hover{
-        border-bottom:solid 1px #FA7762;
+      div:hover {
+        border-bottom: solid 1px #fa7762;
       }
-      
     }
-
-}
+  }
 }
