--- a/client-side/app/src/components/header/header.style.scss
+++ b/client-side/app/src/components/header/header.style.scss
@@ -2,9 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  background-color: #182534;
-  padding: 0.5em;
-  // margin-bottom: 1em;
+  color: black;
 
   .logo-container {
     width: 10%;
@@ -13,48 +11,36 @@
     }
   }
   .options {
-    // width: 50%;
-    // padding: 2em;
-    color: white;
     display: flex;
     justify-content: space-evenly;
 
     .option {
-      color: white;
       padding: 1em;
-      text-decoration: none;
       cursor: pointer;
+      color: black;
+      text-decoration: none;
     }
 
-    a:hover {
-      border-top: solid 2px #fa7762;
-      border-bottom: solid 2px #fa7762;
+    .signin-logout {
+      padding: 1em;
+      cursor: pointer;
+      color: black;
+      text-decoration: none;
     }
 
+    .name {
+      padding: 1em;
+      margin-left: 9em;
+      cursor: pointer;
+      color: black;
+      text-decoration: none;
+      border-right: solid 1px black;
+    }
     div:hover {
-      border-top: solid 2px #fa7762;
-      border-bottom: solid 2px #fa7762;
+      font-weight: 600;
     }
-  }
-
-  .top-right-menu {
-    // background-color: #3A96DD;
-    // width: 10%;
-    // text-decoration: none;
-    // display: flex;
-    // flex-direction: column;
-    // height: 3em;
-
-    .option-top-right {
-      margin: 0 auto;
-      text-decoration: none;
-      color: white;
-      font-size: 0.8em;
-      cursor: pointer;
-
-      div:hover {
-        border-bottom: solid 1px #fa7762;
-      }
+    a:hover {
+      font-weight: 600;
     }
   }
 }
